--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USER = root
-DB_PASS = 
-DB_HOST = 127.0.0.1
-DB_PORT = 3306
-DB_NAME = hv_p1_pairing
+DB_PASS = LMTkjszsRbDRVhwYYxKmHxZTAdUbmnCx
+DB_HOST = metro.proxy.rlwy.net
+DB_PORT = 52177
+DB_NAME = railway
 
 JWT_SECRET=rahasia_super_kuat_say
